[package]
name = "chip8"
version = "0.1.0"
edition = "2021"
description = "Chip8 emulator"
readme = "README.md"
repository = "https://github.com/miklilad/chip8"
license = "MIT"
keywords = ["chip8", "emulator", "interpreter"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
game-loop = { version = "*", features = ["winit"] }
gloo = "0.10.0"
pixels = "0.13.0"
rand = "0.8.5"
serde = "1.0.183"
serde_json = "1.0.105"
stylist = "0.12.1"
wasm-bindgen = "0.2.87"
web-sys = { version="0.3.64", features = ["CanvasRenderingContext2d","Document","Element","HtmlCanvasElement","Window"]}
winit = "0.28.7"
winit_input_helper = "0.14.1"
yew = { version="0.20", features=["csr"] }
