[package]
name = "chip8"
version = "0.1.0"
edition = "2021"
description = "Chip8 emulator"
readme = "README.md"
repository = "https://github.com/miklilad/chip8"
license = "MIT"
keywords = ["chip8", "emulator", "interpreter"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
game-loop = { version = "*", features = ["winit"] }
pixels = "0.13.0"
rand = "0.8.5"
winit = "0.28.7"
